# LLMs-from-scratch

./: .gitignore  MINIMIND_WEEK1_PLAN.md  environment.yml  eval.py  pyproject.toml  requirements.txt
ch2_working_with_text_data/: ch2_main.ipynb  dataloader.py
ch3_attention/.ipynb_checkpoints/: ch3_main-checkpoint.ipynb  mha-checkpoint.py
ch4_implement_GPT/: generate_text_greedy.py  gpt.py
ch4_implement_GPT/.ipynb_checkpoints/: ch4_main-checkpoint.ipynb
ch5_pretraining/: ch5_main.ipynb
dataset/: __init__.py  lm_dataset.py
llm_from_scratch/: __init__.py
llm_from_scratch/ch2_working_with_text_data/: __init__.py  ch2_main.ipynb
llm_from_scratch/ch3_attention/: __init__.py  ch3_main.ipynb
llm_from_scratch/ch4_implement_GPT/: __init__.py  ch4_main.ipynb  gpt.py
llm_from_scratch/ch5_pretraining/: __init__.py  ch5_main.ipynb
model/: __init__.py  model.py  model_lora.py
tools/: replace_minimind_casefold.py
trainer/: __init__.py  rollout_engine.py  train_full_sft.py  train_grpo.py  train_lora.py  train_pretrain.py  trainer_utils.py
